--- a/html_basis/1.css
+++ b/html_basis/1.css
@@ -27,3 +27,11 @@ a img{
 .tinnho {
 	margin-top: 20px;
 }
+table,th,td{
+	border:1px solid black;
+	border-collapse: collapse;
+}
+.table1{
+	width: 200px;
+	height: 300px;
+}
